<resources>
    <string name="app_name">Small Gate Flight Booking System</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="prompt_firstnames">Firstnames</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_phone">Mobile Number</string>
    <string name="prompt_id_number">ID Number</string>
    <string name="prompt_number_of_people">Passengers #</string>
    <string name="prompt_departure">Origin*</string>
    <string name="prompt_destination">Destination*</string>
    <string name="prompt_food">Select Food</string>
    <string name="prompt_drink">Select Drink</string>

    <string name="departure_date">Departure Date</string>
    <string name="prompt_travel_class">Travel Class*</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="return_date">Return Date</string>
    <string name="find_flights">Find flights</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_title_app">Small Gate Flight Booking System</string>
    <string name="pref_title_app_version">Version: 1.0</string>
    <string name="pref_title_display_name">General</string>
    <string name="pref_title_server_url">Url (http://url:port)</string>
    <string name="pref_default_server_url">https://www.flightbookingsystem.tchinossanda.com</string>
    <string name="pref_default_display_name">Developer: </string>
</resources>
