<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_departure"
                    android:textColor="@color/Black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/departure"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_height"
                    android:background="@drawable/border"
                    android:hint="@string/prompt_departure" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_destination"
                    android:textColor="@color/Black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_height"
                    android:background="@drawable/border"
                    android:hint="@string/prompt_destination" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/departure_date"
                    android:textColor="@color/Black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/departure_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:hint="@string/departure_date"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/check_availability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:text="@string/find_flights"
            android:textColor="@color/White"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
