<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <tut.flightbookingsystem.views.FloatingLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                whatever:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <AutoCompleteTextView
                    android:id="@+id/departure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:hint="@string/prompt_departure"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1" />
            </tut.flightbookingsystem.views.FloatingLabel>

            <tut.flightbookingsystem.views.FloatingLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                whatever:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                <AutoCompleteTextView
                    android:id="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:hint="@string/prompt_destination"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1" />
            </tut.flightbookingsystem.views.FloatingLabel>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/departure_date"
                    android:textColor="@color/Black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <tut.flightbookingsystem.views.DateDisplayPicker
                    android:id="@+id/departure_date"
                    style="@android:style/Widget.DeviceDefault.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/departure_date"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/return_date"
                    android:textColor="@color/Black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <tut.flightbookingsystem.views.DateDisplayPicker
                    android:id="@+id/return_date"
                    style="@android:style/Widget.DeviceDefault.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/return_date"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_travel_class"
                    android:textColor="@color/Black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/travel_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_travel_class" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_number_of_people"
                    android:textColor="@color/Black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/num_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/return_date" />
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/check_availability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:text="@string/find_flights"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:padding="5dp">
            <!-- DEV NOTE: Outer wrapper relative layout is added intentionally to address issue
            that only happens on Marshmallow & Nougat devices (API 23 & 24).
            On marshmallow API 23, the "RecyclerView" `layout_height="wrap_content"` does NOT
            occupy the height of all the elements added to it via adapter. The result is cut out
            items that is outside of device viewport when it loads initially.
            Wrapping "RecyclerView" with "RelativeLayout" fixes the issue on Marshmallow devices.
            -->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--tools:listitem="@layout/row_list_item">-->
            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
