<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:focusable="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo" />

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <tut.flightbookingsystem.views.FloatingLabel
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    whatever:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:hint="@string/prompt_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textSize="@dimen/edit_text_font_size" />
                </tut.flightbookingsystem.views.FloatingLabel>

                <tut.flightbookingsystem.views.FloatingLabel
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    whatever:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

                    <AutoCompleteTextView
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="@dimen/edit_text_font_size" />
                </tut.flightbookingsystem.views.FloatingLabel>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="6dp"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/White"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/email_register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="6dp"
                    android:text="@string/action_register"
                    android:textColor="@color/White"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom|center_horizontal"
            android:text="Copyright 2017 - Small Gate"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>
</ScrollView>
