<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_departure"
                    android:textColor="@color/Black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/departure"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_height"
                    android:background="@drawable/border"
                    android:hint="@string/prompt_departure" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_destination"
                    android:textColor="@color/Black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_height"
                    android:background="@drawable/border"
                    android:hint="@string/prompt_destination" />
            </LinearLayout>

            <!--<tut.flightbookingsystem.views.FloatingLabel-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:padding="5dp"-->
            <!--whatever:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">-->
            <!---->
            <!--<AutoCompleteTextView-->
            <!--android:id="@+id/departure"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@drawable/border"-->
            <!--android:hint="@string/prompt_departure"-->
            <!--android:imeOptions="actionUnspecified"-->
            <!--android:inputType="text"-->
            <!--android:maxLines="1"-->
            <!--android:textSize="@dimen/edit_text_font_size" />-->
            <!--</tut.flightbookingsystem.views.FloatingLabel>-->

            <!--<tut.flightbookingsystem.views.FloatingLabel-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:padding="5dp"-->
            <!--whatever:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">-->

            <!--<AutoCompleteTextView-->
            <!--android:id="@+id/destination"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@drawable/border"-->
            <!--android:hint="@string/prompt_destination"-->
            <!--android:imeOptions="actionUnspecified"-->
            <!--android:inputType="text"-->
            <!--android:maxLines="1"-->
            <!--android:textSize="@dimen/edit_text_font_size" />-->
            <!--</tut.flightbookingsystem.views.FloatingLabel>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/departure_date"
                    android:textColor="@color/Black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <tut.flightbookingsystem.views.DateDisplayPicker
                    android:id="@+id/departure_date"
                    style="@android:style/Widget.DeviceDefault.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:hint="@string/departure_date"
                    android:textSize="@dimen/edit_text_font_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/return_date"
                    android:textColor="@color/Black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <tut.flightbookingsystem.views.DateDisplayPicker
                    android:id="@+id/return_date"
                    style="@android:style/Widget.DeviceDefault.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:hint="@string/return_date"
                    android:textSize="@dimen/edit_text_font_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_travel_class"
                    android:textColor="@color/Black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/travel_class"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_height"
                    android:background="@drawable/border"
                    android:hint="@string/prompt_travel_class" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_number_of_people"
                    android:textColor="@color/Black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/num_people"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_height"
                    android:background="@drawable/border"
                    android:hint="@string/return_date" />
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/check_availability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:text="@string/find_flights"
            android:textColor="@color/White"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
